--- a/public/chat.html
+++ b/public/chat.html
@@ -57,6 +57,7 @@
         </div>
     </div>
 
+    <script src="/socket.io/socket.io.js" charset="utf-8"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
