users can now join different rooms

--- a/public/chat.html
+++ b/public/chat.html
@@ -44,6 +44,7 @@
         </div>
     </div>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/qs/6.9.3/qs.min.js" charset="utf-8"></script>
     <script src="/socket.io/socket.io.js" charset="utf-8"></script>
     <script src="js/main.js"></script>
 </body>
